2018-10-08  Markus Gans  <guru.mail@muenster.de>
	* Move all termcap code into FTermcap
	* Some small code splits

2018-10-05  Markus Gans  <guru.mail@muenster.de>
	* Remove redundant program code from FString

2018-10-03  Markus Gans  <guru.mail@muenster.de>
	* At the end of the lifetime of an FMenuItem object, 
	  delete its entry from the object list of the parent object
	* Reduce the use of the new operators in the examples
	* Adding a unit test for the FTermData class

2018-10-01  Markus Gans  <guru.mail@muenster.de>
	* Extract FTerm data members into the data class FTermData

2018-09-28  Markus Gans  <guru.mail@muenster.de>
	* FListView now has the ability to sort by columns

2018-09-27  Markus Gans  <guru.mail@muenster.de>
	* Move time event processing from FApplication to FObject

2018-09-26  Markus Gans  <guru.mail@muenster.de>
	* The FListViewItem class now has a getData() and a setData() method 
	  similar to the FListBoxItem class.

2018-09-24  Markus Gans  <guru.mail@muenster.de>
	* Stricter use of the keyword virtual
	* Add a first steps document

2018-09-20  Markus Gans  <guru.mail@muenster.de>
	* Added pkg-config file finalcut.pc
	* The entire library source code is now encapsulated under 
	  the namespace finalcut. All examples and tests have been 
	  modified to fit the namespace.

2018-09-16  Markus Gans  <guru.mail@muenster.de>
	* Implement a ttytype test for the FTermDetection unit test

2018-09-14  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FTermDetection with a terminal simulation 
	  for common terminals
	* Some minor terminal detection bug fixes

2018-09-12  Markus Gans  <guru.mail@muenster.de>
	* Removes the deprecated keyword "register" 
	  from the source code

2018-09-02  Markus Gans  <guru.mail@muenster.de>
	* Fix mouse wheel behavior over horizontal scroll bars
	  in FTextView
	* Some small code improvements

2018-09-01  Markus Gans  <guru.mail@muenster.de>
	* Compiles now with newer gcc
